# debate

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.streamlit/: secrets.toml.example
src/: __init__.py
src/backend/: agents.py  models.py  orchestrator.py  tools.py
src/frontend/: app.py
src/shared/: models.py
