[project]
name = "debate"
version = "0.1.0"
description = "Multi-agent debate platform pitting LLMs against each other"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "ddgs>=8.1.1",
    "google-genai>=1.0.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]

[project.scripts]
debate = "src.frontend.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
